<resources>
    <string name="app_name">Covid-Droid</string>
    <string name="app_market_url">market://details?id=com.malisante.fad.ebolamali</string>
    <string name="version_button_default_label">Vérifier mises à jour</string>
    <string name="version_button_label">Version %1$s (vérifier mises à jour)</string>
    <string name="orange">Orange</string>
    <string name="malitel">Malitel</string>
    <string name="num_malitel">37821</string>
    <string name="num_orange">36061</string>
    <string name="action_settings">Settings</string>
    <string name="play_str">PLAY</string>
    <string name="pause_str">PAUSE</string>
    <string name="inital_Time">0:0</string>
    <string name="l1">Français</string>
    <string name="l2">Bambara</string>
    <string name="l3">Soninké</string>
    <string name="url_tous_contreebolaml">https://www.facebook.com/pages/Tous-Contre-Ebola-au-Mali/1539747236239746?fref=ts</string>
    <string name="required_connexion_title">Connexion requise</string>
    <string name="required_connexion_body">Cette action nécessite une connexion à Internet. Activez les données ou le WiFi puis réessayez.</string>
    <string name="required_connexion_cancel">Annuler</string>
    <string name="required_connexion_retry">Réessayer</string>
    <string name="go_to_preferences">Aller aux paramètres</string>
    <string name="about_long_description">
        <![CDATA[
            <h4>Prévention et info. COVID-19</h4>
            <div>Cette application a été développé dans le cadre de la campagne #StopCoronavirusAuMali.
                Stop COVID-19 vise à prévenir et informer sur COVID-19.</div>
        ]]>
    </string>
    <string name="Initiateur">
        <![CDATA[
            <h3>Ont travaillé sur le projet:</h3>
           <b>Initiateur:</b><br/>
           \t <b> IBS-Mali.</b><br/>
           \t <b>Tel:</b> +223 76 43 38 90<br/>
           \t <b>E-mail:</b> contact@ibsmali.ml<br/>
           \t <b>web:</b> <a href="www.ibsmali.ml">www.ibsmali.ml</a><br/>
        ]]>
    </string>
    <string name="autor">
        <![CDATA[
            <b>Développeur:</b><br/>
            \t Assa KABA et Ibrahim Fadiga <br/>
            \t <b>Tel: </b> +223 76 43 38 90 <br/>
            \t <b>E-mail: </b>ibfadiga@gmail.com <br/>
         ]]>
    </string>
    <string name="transltor">
        <![CDATA[
            <b>Traducteurs: </b><br/>
            \t <b>Français: </b>??<br/>
            \t <b>Bambara: </b>??<br/>
            \t <b>Sonike: </b>Assa KABA<br/>
         ]]>
    </string>
    <string name="contributor">
        <![CDATA[
            <b>Contributeurs:</b><br/>
            \t <b>Logo: </b><br/>
         ]]>
    </string>
    <string name="link_face">#StopCoronavirusAuMali</string>
    <string name="news">Actualité</string>
    <string  name="Q1">Qu\'est-ce qu\'un coronavirus ?</string>
    <string name="R1">Les coronavirus forment une vaste famille de virus qui peuvent être pathogènes chez l’homme et chez l’animal. On sait que, chez l’être humain, plusieurs coronavirus peuvent entraîner des infections respiratoires dont les manifestations vont du simple rhume à des maladies plus graves comme le syndrome respiratoire du Moyen-Orient (MERS) et le syndrome respiratoire aigu sévère (SRAS). Le dernier coronavirus qui a été découvert est responsable de la maladie à coronavirus 2019 (COVID-19).</string>
    <string name="Q2">Qu\'est-ce que la COVID-19?</string>
    <string name="R2">La COVID-19 est la maladie infectieuse causée par le dernier coronavirus qui a été découvert. Ce nouveau virus et cette maladie étaient inconnus avant l’apparition de la flambée à Wuhan (Chine) en décembre 2019. </string>
    <string name="Q3">Quels sont les symptomes de la COVID-19?</string>
    <string name="R3">Les symptômes les plus courants de la COVID-19 sont la fièvre\, la fatigue et une toux sèche. Certains patients présentent des douleurs, une congestion nasale, un écoulement nasal, des maux de gorge ou une diarrhée. Ces symptômes sont généralement bénins et apparaissent de manière progressive. Certaines personnes, bien qu’infectées, ne présentent aucun symptôme et se sentent bien. La plupart (environ 80 %) des personnes guérissent sans avoir besoin de traitement particulier. Environ une personne sur six contractant la maladie présente des symptômes plus graves, notamment une dyspnée. Les personnes âgées et celles qui ont d’autres problèmes de santé (hypertension artérielle, problèmes cardiaques ou diabète) ont plus de risques de présenter des symptômes graves. Toute personne qui a de la fièvre, qui tousse et qui a des difficultés à respirer doit consulter un médecin. </string>
    <string name="Q4">Comment la COVID-19 se propage-t-elle?</string>
    <string name="R4">La COVID-19 est transmise par des personnes porteuses du virus. La maladie peut se transmettre d’une personne à l’autre par le biais de gouttelettes respiratoires expulsées par le nez ou par la bouche lorsqu’une personne tousse ou éternue. Ces gouttelettes peuvent se retrouver sur des objets ou des surfaces autour de la personne en question. On peut alors contracter la COVID-19 si on touche ces objets ou ces surfaces et si on se touche ensuite les yeux, le nez ou la bouche. Il est également possible de contracter la COVID-19 en inhalant des gouttelettes d’une personne malade qui vient de tousser ou d’éternuer. C’est pourquoi il est important de se tenir à plus d’un mètre d’une personne malade.</string>
    <string name="Q5">Comment puis-je me protéger et éviter que la maladie ne se propage?</string>
    <string name="R5">Vous pouvez réduire le risque d’être infecté ou de propager la COVID-19 en prenant quelques précautions simples :
\n•	Se laver fréquemment et soigneusement les mains avec une solution hydroalcoolique ou à l’eau et au savon.
\n Pourquoi ? Se laver les mains avec une solution hydroalcoolique ou à l’eau et au savon tue le virus s’il est présent sur vos mains.
\n•	Maintenir une distance d’au moins un mètre avec les autres personnes qui toussent ou qui éternuent.
\n Pourquoi ? Lorsqu’une personne tousse ou éternue, elle projette de petites gouttelettes qui peuvent contenir le virus. Si vous êtes trop près, vous pouvez inhaler ces gouttelettes et donc le virus responsable de la COVID-19 si la personne qui tousse en est porteuse.
\n•	Éviter de se toucher les yeux, le nez et la bouche.
\n Pourquoi ? Les mains sont en contact avec de nombreuses surfaces qui peuvent être contaminées par le virus. Si vous vous touchez les yeux, le nez ou la bouche, le virus peut pénétrer dans votre organisme et vous pouvez tomber malade.
\n•	Veillez à respecter les règles d’hygiène respiratoire et à ce que les personnes autour de vous en fassent autant. En cas de toux ou d’éternuement, il faut se couvrir la bouche et le nez avec le pli du coude, ou avec un mouchoir et jeter le mouchoir immédiatement après.
\n Pourquoi ? Les gouttelettes respiratoires propagent des virus. En respectant les règles d’hygiène respiratoire, vous protégez les personnes autour de vous de virus tels que ceux responsables du rhume, de la grippe ou de la COVID-19.
\n•	Si vous ne vous sentez pas bien, restez chez vous. En cas de fièvre, de toux et de dyspnée, consultez un médecin après l’avoir appelé. Suivez les instructions des autorités sanitaires locales.
\n Pourquoi ? Ce sont les autorités nationales et locales qui disposent des informations les plus récentes sur la situation dans la région où vous vous trouvez. Si vous l’appelez, votre médecin pourra vous orienter rapidement vers l’établissement de santé le plus adapté. En outre, cela vous protègera et évitera la propagation de virus et d’autres agents infectieux.
\n•	Informez-vous constamment pour savoir quelles sont les villes ou les zones où la COVID-19 se propage à grande échelle. Si possible, évitez de voyager, en particulier si vous êtes âgé ou diabétique ou si vous avez une maladie cardiaque ou pulmonaire.
\n Pourquoi ? Le risque de contracter la COVID-19 est plus élevé dans ces régions.
</string>
    <string name="Q6">La COVID-19 doit-elle m’inquiéter ?</string>
    <string name="R6">La COVID-19 est généralement bénigne, en particulier chez l’enfant et le jeune adulte, mais elle peut aussi être grave : 1 malade sur 5 doit être hospitalisé. Il est donc tout à fait normal de s’inquiéter des conséquences de la flambée de COVID-19 pour soi-même et pour ses proches.
    Il est possible d’apaiser son inquiétude en prenant des mesures pour se protéger et protéger ses proches et son entourage. Tout d’abord, il faut se laver régulièrement et soigneusement les mains et respecter les règles d’hygiène respiratoire. Deuxièmement, il faut se tenir au courant de la situation et suivre les conseils des autorités sanitaires locales, notamment en ce qui concerne les restrictions aux voyages, aux déplacements et aux rassemblements. Pour plus d’informations sur les moyens de se protéger, consulter : https://www.who.int/fr/emergencies/diseases/novel-coronavirus-2019/advice-for-public.
    </string>
    <string name="Q7">Quelle est la probabilité de contracter la COVID-19 ?</string>
    <string name="R7">risque dépend de l’endroit où vous habitez et, plus précisément, de la présence ou non d’une flambée.
    Pour la plupart des gens, à la plupart des endroits, le risque de contracter la COVID-19 reste faible. Cependant, la propagation d’intensifie désormais dans certaines villes ou régions. Pour les personnes qui y habitent ou s’y rendent, le risque de contracter la COVID-19 est plus élevé. Les gouvernements et les autorités sanitaires prennent des mesures énergiques chaque fois qu’un nouveau cas de COVID-19 est identifié. Respectez les restrictions locales aux voyages, aux déplacements ou aux grands rassemblements. En participant à ces efforts de lutte contre la maladie, vous réduisez le risque de contracter ou de propager la COVID-19.
    Les flambées de COVID-19 peuvent être endiguées et la transmission peut être enrayée, comme on l’a vu en Chine et dans certains autres pays. Malheureusement, de nouvelles flambées apparaissent rapidement. Il est important de connaître la situation là où vous êtes ou là où vous comptez aller.</string>
    <string name="Q8">Qui risque d’être atteint d’une forme grave de la maladie ?</string>
    <string name="R8">Même si nous devons encore approfondir nos connaissances sur la façon dont la COVID-19 affecte les individus, jusqu’à présent, les personnes âgées et les personnes déjà atteintes d’autres maladies (comme l’hypertension artérielle, les maladies pulmonaires, le cancer, le diabète ou les cardiopathies) semblent être gravement atteintes plus souvent que les autres.</string>
    <string name="Q9">Combien de temps dure la période d’incubation de la COVID-19 ?</string>
    <string name="R9">La période d’incubation est le temps qui s’écoule entre l’infection et l’apparition des symptômes de la maladie. On estime actuellement que la période d’incubation de la COIVD-19 dure de 1 à 14 jours et le plus souvent autour de cinq jours. Ces estimations seront actualisées à mesure que de nouvelles données seront disponibles.</string>
    <string name="Q10">Mon animal domestique peut-il me transmettre la COVID-19 ?</string>
    <string name="R10">Il y a eu un cas d’infection chez un chien à Hong Kong mais, à ce jour, rien ne prouve que les animaux de compagnie, tels que les chiens ou les chats, peuvent transmettre la COVID-19. La maladie se transmet principalement par les gouttelettes expulsées par les personnes infectées quand elles toussent, éternuent ou parlent. Pour vous protéger, lavez-vous les mains fréquemment et soigneusement.</string>
</resources>