<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Question">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/scrollView"
        style="@android:style/Animation.Translucent"
        android:layout_above="@+id/versionButton">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="555dp"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:gravity="center_horizontal"
                android:text=" Sensibilisation sur la COVID-19"
                android:textColor="@android:color/black"
                android:textSize="25dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textView1"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="20dp"
                android:layout_weight="34"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:text="@string/Q1"
                android:textSize="20dp"
                android:onClick="goto_resp_q1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

        </LinearLayout>

        <Button
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="46dp"
            android:layout_marginTop="20dp"
            android:layout_weight="9"
            android:background="@drawable/buttonq"
            android:gravity="center_horizontal"
            android:onClick="goto_resp_q2"
            android:text="@string/Q2"
            android:textSize="20dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:onClick="goto_resp_q3"
                android:text="@string/Q3"
                android:textSize="20dp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="9"
                android:onClick="goto_resp_q4"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:text="@string/Q4"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textView5"
                android:layout_width="443dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:onClick="goto_resp_q5"
                android:text="@string/Q5"
                android:textSize="20dp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textView6"
                android:layout_width="445dp"
                android:layout_height="45dp"
                android:layout_marginTop="10dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:onClick="goto_resp_q6"
                android:text="@string/Q6"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/textView7"
                android:layout_width="445dp"
                android:layout_height="70dp"
                android:layout_marginTop="10dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:onClick="goto_resp_q7"
                android:text="@string/Q7"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/textView8"
                android:layout_width="445dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:text="@string/Q8"
                android:onClick="goto_resp_q8"
                android:textSize="20dp" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/textView9"
                android:layout_width="445dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_weight="9"
                android:background="@drawable/buttonq"
                android:gravity="center_horizontal"
                android:text="@string/Q9"
                android:onClick="goto_resp_q9"
                android:textSize="20dp" />

        </LinearLayout>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>